--- a/text/ondrej-pesek-dp-2018.tex
+++ b/text/ondrej-pesek-dp-2018.tex
@@ -195,6 +195,7 @@ Appendix contains a user manual and examples of usage.}
 využití Mask R-CNN (Mask region-based convolutional neural networks) v
 prostředí GRASS GIS. Tyto nástroje zprostředkovávají možnost učit svůj vlastní
 Mask R-CNN model a~aplikovat jej za účelem získání vektorových masek objektů z
+%% ML: textove -> uvodni?
 rastrových dat. V textové části je nejprve nastíněn teoretický základ
 konvolučních neuronových sítí, následuje přehled možností jejich využití v
 počítačovém vidění, dále kapitoly o použitých technologiích, a~uzavírá ji část
