follow MLs comments

--- a/text/2-bg.tex
+++ b/text/2-bg.tex
@@ -93,7 +93,7 @@ kernel\_height + 1]$. An~example may be seen in figure \ref{fig:conv}.
 \begin{figure}[h]
    \centering
 	\includegraphics[width=.8\linewidth]{./pictures/conv.jpg}
-	\caption[Kernel convolution]{Two steps of kernel convolution}
+	\caption[Kernel convolution]{Two steps of kernel convolution, source: author}
       \label{fig:conv}
 \end{figure}
 
