--- a/text/3-image-ann.tex
+++ b/text/3-image-ann.tex
@@ -38,8 +38,9 @@ representation might be for instance a colour shift, the~decision an answer to a
 question like \textit{Is there any football field in the~picture?}
 
 %% ML: zkus vetu prepsat, je v ni 3x that
-However, the~problem is that the~claim that it is easy for humans does not mean 
-that it is easy also for computers. As is generally known and was indicated in 
+%% OP: Zredukovano na jedno
+However, the~claim that it is easy for humans does not implicate any
+simplicity also for computers. As is generally known and was indicated in 
 chapter \ref{understanding-cnn}, the~human brain is an extremely complex tool. 
 The other thing is that a computer receives a visual impulse (image) in another 
 way as is illustrated in figure \ref{fig:mirror}. Where human sees a side 
@@ -135,7 +136,7 @@ the~object, so the~user ends up with two outputs:
    \includegraphics[width=.7\linewidth]{./pictures/class-loc.JPG}
    %% ML: zdroj autor?
 	\caption[Classification with localization example]{An example of classification 
-	with localization}
+	with localization, source: author}
       \label{fig:class-loc}
 \end{figure}
 
