--- a/text/ondrej-pesek-dp-2018.tex
+++ b/text/ondrej-pesek-dp-2018.tex
@@ -196,9 +196,10 @@ využití Mask R-CNN (Mask region-based convolutional neural networks) v
 prostředí GRASS GIS. Tyto nástroje zprostředkovávají možnost učit svůj vlastní
 Mask R-CNN model a~aplikovat jej za účelem získání vektorových masek objektů z
 %% ML: textove -> uvodni?
-rastrových dat. V textové části je nejprve nastíněn teoretický základ
+%% OP: V textové části -> V textu práce. Díky.
+rastrových dat. V textu práce je nejprve nastíněn teoretický základ
 konvolučních neuronových sítí, následuje přehled možností jejich využití v
-počítačovém vidění, dále kapitoly o použitých technologiích, a~uzavírá ji část
+počítačovém vidění, dále kapitoly o použitých technologiích, a~uzavírá jej část
 věnovaná implementaci samotné. Přílohy obsahují uživatelskou příručku a ukázku
 výsledků dosažených za využití vytvořených modulů.}
 
