syntax issue in appendix (cosmetics)

--- a/text/prilohy.tex
+++ b/text/prilohy.tex
@@ -304,8 +304,8 @@ If the~dataset consists of images of the~same size, the~user may use the
 flag is not used, images are resized to have their longer side equal to the
 value of the~\textstyleEmphasis{images\_max\_dim} parameter and the~shorter
 side longer or equal to the~value of the~\textstyleEmphasis{images\_min\_dim}
-parameter and zero-padded to be of shape \verb|images\_max\_dim| $\times$
-\verb|images\_max\_dim|. It results in the~fact that even images of different
+parameter and zero-padded to be of shape \verb|images_maxx_dim| $\times$
+\verb|images_max_dim|. It results in the~fact that even images of different
 sizes may be used. 
 
 After each epoch, the~current model is saved. It allows the~user to stop
