ann.maskrcnn -> i.ann.maskrcnn

--- a/text/5-implementation.tex
+++ b/text/5-implementation.tex
@@ -99,7 +99,7 @@ code.
 
 %% ML: files (Python modules) ?
 %% OP: Jsou skripty v knihovne vnimany jako moduly?
-The library consists of four files:
+The library consists of four Python modules:
 \begin{itemize}
 	 \item \verb|config.py|: The~configuration file for the~model. It will be
 	 described in chapter \ref{config}.
