--- a/text/6-conclusion.tex
+++ b/text/6-conclusion.tex
@@ -10,9 +10,10 @@ The first part of the~thesis was dedicated to a~theoretical background behind
 \zk{CNN}s. It is followed by their various applications in the~field of computer 
 vision. 
 
-The second part of the~thesis was dedicated to the implementation of Mask \zk{R-CNN} 
-modules into GRASS GIS. It starts with a~brief introduction of some of the~used 
-tools and follows with explanations of the~most important parts of the~code.
+The second part of the~thesis was dedicated to the implementation of Mask
+\zk{R-CNN} modules into GRASS GIS. It starts with a~brief introduction of some
+of the~used tools and follows with explanations of the~most important parts of
+the~code.
 
 The research flows in the~background of the~theoretical part and is briefly 
 summarized at the~beginning of the~chapter on the~implementation.
@@ -25,8 +26,11 @@ GIS developers and users and they found their results to be satisfying,
 sometimes even for data, where other methods of classification in GRASS GIS 
 failed (a shadow over a~field, different colours, etc.).
 
-Even though modules work, there are still some possible extensions and even some 
-issues.
+Developed modules are available from the GitHub
+repository\footnote{\url{https://github.com/ctu-geoforall-lab-projects/dp-pesek-2018}}.
+
+Even though modules work, there are still some possible extensions and even
+some issues.
 
 The biggest issue is in insufficient support for Python 3 in GRASS GIS. This 
 issue is solved by a~patch attached as an e-attachment and should be solved in 
@@ -34,11 +38,17 @@ GRASS GIS during this year.
 
 Possible extensions are:
 \begin{itemize}
-	\item Support more training data annotation structures. The~current state works with \verb|*.jpg| images and \verb|*.png| masks for each instance. The~next step could be a~JSON-based structure used in MS COCO\footnote{\url{http://cocodataset.org/\#format-data}}.
-	\item Support training on images in GRASS GIS (using raster map as images, vector areas as masks).
+	\item Support more training data annotation structures. The~current state
+	works with \verb|*.jpg| images and \verb|*.png| masks for each instance.
+	The~next step could be a~JSON-based structure used in MS
+	COCO\footnote{\url{http://cocodataset.org/\#format-data}}.
+	\item Support training on images in GRASS GIS (using raster map as images,
+	vector areas as masks).
 	\item Support more channels than three.
-	\item Support more types of the~backbone architecture. Now only \zk{ResNet} 50 and \zk{ResNet} 101 are supported.
-	\item Diversify head architecture types. The~current one is just very basic one.
+	\item Support more types of the~backbone architecture. Now only \zk{ResNet} 50
+	and \zk{ResNet} 101 are supported.
+	\item Diversify head architecture types. The~current one is just very basic
+	one.
 \end{itemize}
 
 The last thing worthy of mention is the~high gear of progress. After only six 
