--- a/text/prilohy.tex
+++ b/text/prilohy.tex
@@ -45,14 +45,21 @@ so please install Python 3 versions.
 \item h5py
 \end{itemize}
 
-After dependencies are fulfilled, modules can be installed using
+After dependencies are fulfilled, modules can be installed locally using
 \emph{g.extension} module:
 {\footnotesize
 \begin{lstlisting}
-g.extension extension=maskrcnn url=path/to/the/maskrcnn/folder
+g.extension extension=i.ann.maskrcnn url=path/to/the/i.ann.maskrcnn/folder
 \end{lstlisting}
 }
 
+After submitting the thesis, modules will be added to GRASS GIS official
+AddOns. It should be possible to install them directly by this command:
+{\footnotesize
+\begin{lstlisting}
+g.extension extension=i.ann.maskrcnn
+\end{lstlisting}
+}
 
 \subsection*{GRASS GIS PATCH}
 
@@ -75,10 +82,6 @@ his GRASS GIS with the~following patch:
              raise SyntaxError("invalid output from g.parser: %s" % line)
 \end{lstlisting}
 }
-
-\subsection*{MODULES}
-
-\emph{i.ann.maskrcnn.train},\emph{ }\emph{i.ann.maskrcnn.detect}\emph{ }
 
 \clearpage
 
@@ -304,7 +307,7 @@ If the~dataset consists of images of the~same size, the~user may use the
 flag is not used, images are resized to have their longer side equal to the
 value of the~\textstyleEmphasis{images\_max\_dim} parameter and the~shorter
 side longer or equal to the~value of the~\textstyleEmphasis{images\_min\_dim}
-parameter and zero-padded to be of shape \verb|images_maxx_dim| $\times$
+parameter and zero-padded to be of shape \verb|images_max_dim| $\times$
 \verb|images_max_dim|. It results in the~fact that even images of different
 sizes may be used. 
 
